--- a/app/views/sufia/uploads/_js_templates.html.erb
+++ b/app/views/sufia/uploads/_js_templates.html.erb
@@ -31,26 +31,6 @@
 {% } %}
 </script>
 
-<!-- function used by the following template -->
-<script type="text/javascript">
-  function setAllResourceTypes() {
-    var firstResourceType = $(".resource_type_dropdown")[0];
-    var selected_options = [];
-    for (var i = 0; i < firstResourceType.length; i++) {
-      if (firstResourceType.options[i].selected) {
-        selected_options.push(firstResourceType.options[i].value);
-      }
-    }
-    $(".resource_type_dropdown").each(function(index, element) {
-      for(var i=0; i< this.length; i++) {
-        if ($.inArray(this.options[i].value, selected_options) > -1) {
-            this.options[i].selected = true;
-        }
-      }
-    });
-  }
-</script>
-
 <!-- The template to display files available for download -->
 <script id="batch-template-download" type="text/x-tmpl">
 {% for (var i=0, file; file=o.files[i]; i++) { %}
@@ -86,7 +66,7 @@
                   </select>
                   <!-- TODO: Why is the button drawn for all files? -->
                   {% if (i == 0) { %}
-                    <button class="btn pull-right resource_type_button" onClick="setAllResourceTypes(); return false;">Set all to this Resource Type</button>
+                    <button class="btn pull-right resource_type_button">Set all to this Resource Type</button>
                   {% } %}
                 </div>
               </div>
